--- a/lead/.cargo/config.toml
+++ b/lead/.cargo/config.toml
@@ -1,3 +1,7 @@
 rustflags = []
+
+[unstable]
+build-std = ["core", "std", "proc_macro", "alloc"]
+
 [target.aarch64-unknown-linux-gnu]
 linker = "aarch64-linux-gnu-gcc"
