--- a/leadman/.cargo/config.toml
+++ b/leadman/.cargo/config.toml
@@ -2,3 +2,6 @@ rustflags = []
 
 [target.aarch64-unknown-linux-gnu]
 linker = "aarch64-linux-gnu-gcc"
+
+[unstable]
+build-std = ["core", "std", "proc_macro", "alloc"]
