--- a/interpreter/Cargo.toml
+++ b/interpreter/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.0.0-dev-lead-lang"
 edition = "2021"
 description = "Interpreter of the Lead Programming Language"
 license = "MIT"
-repository = "https://github.com/AHQ-Softwares/lead"
+repository = "https://github.com/leadlang/lead"
 
 [lib]
 name = "interpreter"
