--- a/leadman/Cargo.toml
+++ b/leadman/Cargo.toml
@@ -25,8 +25,9 @@ reqwest = { version = "0.12", default-features = false, features = [
 ] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.134"
+sha256 = { version = "1.5.0", default-features = false }
 tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs"] }
-zip = "2"
+zip = "2.2.2"
 
 [target.'cfg(windows)'.dependencies]
 winreg = "0.52.0"
