--- a/leadman/Cargo.toml
+++ b/leadman/Cargo.toml
@@ -26,7 +26,13 @@ reqwest = { version = "0.12", default-features = false, features = [
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.134"
 sha256 = { version = "1.5.0", default-features = false }
-tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs"] }
+tokio = { version = "1", features = [
+  "rt",
+  "rt-multi-thread",
+  "macros",
+  "fs",
+  "process",
+] }
 zip = "2.2.2"
 
 [target.'cfg(windows)'.dependencies]
