--- a/lead_old/Cargo.toml
+++ b/lead_old/Cargo.toml
@@ -8,5 +8,9 @@ name = "lead"
 path = "./src/main.rs"
 
 [dependencies]
-dlopen2 = "0.7.0"
 lead_lang_interpreter = { path = "../interpreter" }
+inquire = "0.7"
+clap = { version = "4", features = ["derive"] }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+libloading = "0.8"
