--- a/lead/Cargo.toml
+++ b/lead/Cargo.toml
@@ -8,5 +8,8 @@ name = "lead"
 path = "./src/main.rs"
 
 [dependencies]
+chalk_rs = "1.0.1"
 dlopen2 = "0.7.0"
 lead_lang_interpreter = { path = "../interpreter" }
+serde = { version = "1.0.216", features = ["derive"] }
+serde_json = "1.0.134"
