--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -258,6 +258,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Install Node
+        uses: actions/setup-node@v4
+
       - name: Install Rust
         uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
@@ -271,8 +274,15 @@ jobs:
           sudo apt install zip
           sudo apt install libc6
 
+      - name: Add Version Info
+        run: node ver.js
+        env:
+          NIGHTLY: ${{ github.event_name == 'push' }}
+          LEAD_VER: ${{ needs.tag.outputs.tag }}
+
       - name: Package Stuff
         run: |
+
           sudo apt-get update
           sudo apt-get -y install podman
 
