--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -250,7 +250,13 @@ jobs:
           - x86_64-unknown-freebsd
           - aarch64-unknown-freebsd
           - i686-unknown-freebsd
+
           - x86_64-unknown-netbsd
+
+          - x86_64-unknown-illumos
+          - x86_64-unknown-dragonfly
+          - x86_64-pc-solaris
+          - sparcv9-sun-solaris
 
     runs-on: ubuntu-24.04
 
