--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -292,7 +292,7 @@ jobs:
           sudo apt-get update
           sudo apt-get -y install podman
 
-          RUSTFLAGS="" cargo install cross --force --git https://github.com/ahqsoftwares/cross
+          RUSTFLAGS="" cargo install cross --force --git https://github.com/cross-rs/cross
 
           cargo run --release
         env:
