--- a/lead_old/.cargo/config.toml
+++ b/lead_old/.cargo/config.toml
@@ -5,3 +5,6 @@ build-std = ["core", "std", "proc_macro", "alloc"]
 
 [target.aarch64-unknown-linux-gnu]
 linker = "aarch64-linux-gnu-gcc"
+
+[target.x86_64-pc-solaris]
+linker = "x86_64-pc-solaris2.11-gcc"
