--- a/leadman/.cargo/config.toml
+++ b/leadman/.cargo/config.toml
@@ -3,5 +3,8 @@ rustflags = []
 [target.aarch64-unknown-linux-gnu]
 linker = "aarch64-linux-gnu-gcc"
 
+[target.x86_64-pc-solaris]
+linker = "x86_64-pc-solaris2.11-gcc"
+
 [unstable]
 build-std = ["core", "std", "proc_macro", "alloc"]
