--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -256,6 +256,13 @@ jobs:
           - x86_64-unknown-illumos
           - x86_64-unknown-dragonfly
 
+          - aarch64-linux-android
+          - arm-linux-androideabi
+          - armv7-linux-androideabi
+          - i686-linux-android
+          - thumbv7neon-linux-androideabi
+          - x86_64-linux-android
+
     runs-on: ubuntu-24.04
 
     steps:
